# genericcpp

./: .gitignore
GenericClassApp/: CMakeLists.txt  build.bat
GenericClassApp/src/: genericclassapp.cpp
GenericClassLib/: CMakeLists.txt
GenericClassLib/include/: genericclass.h  genericclassExport.h
GenericClassLib/src/: genericclass.cpp
InheritanceClassApp/: CMakeLists.txt  build.bat
InheritanceClassApp/src/: inheritanceclassapp.cpp
InheritanceClassLib/: CMakeLists.txt  build.bat
InheritanceClassLib/src/: baseclass.cpp  childclass1.cpp  childclass2.cpp
